--- a/Nexter/starter/css/style.css
+++ b/Nexter/starter/css/style.css
@@ -144,11 +144,12 @@ body {
   margin: 15rem 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  grid-gap: 6rem; }
+  gap: 6rem; }
   .homes .home {
     background-color: #f9f7f6;
     display: grid;
-    grid-template-columns: repeat(2, 1fr); }
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 3rem; }
     .homes .home__img {
       grid-row: 1/2;
       grid-column: 1/-1;
@@ -163,9 +164,11 @@ body {
       height: 3rem; }
     .homes .home__name {
       grid-column: 1/-1;
+      grid-row: 1/2;
+      align-self: end;
       width: 80%;
       justify-self: center;
-      margin-top: -2.5rem;
+      margin-bottom: -2rem;
       padding: 1.25rem;
       background-color: #101d2c;
       text-align: center;
@@ -179,18 +182,69 @@ body {
       font-size: 1.5rem;
       margin-left: 2rem;
       align-items: center;
-      gap: 1rem;
-      display: flex; }
+      display: flex;
+      gap: 1rem; }
       .homes .home__location svg, .homes .home__rooms svg, .homes .home__area svg, .homes .home__price svg {
         fill: #c69963;
-        width: 3rem;
-        height: 3rem; }
+        width: 2rem;
+        height: 2rem; }
     .homes .home .btn {
       grid-column: 1/-1; }
 
 .gallary {
-  background-color: #54483a;
-  grid-column: full-start/full-end; }
+  background-color: #f9f7f6;
+  grid-column: full-start/full-end;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(7, 5vw);
+  grid-gap: 2rem;
+  padding: 2rem; }
+  .gallary > * {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block; }
+  .gallary .img1 {
+    grid-column: 1/3;
+    grid-row: 1/span 2; }
+  .gallary .img2 {
+    grid-column: 3/span 3;
+    grid-row: 1/span 3; }
+  .gallary .img3 {
+    grid-column: 6/7;
+    grid-row: 1/3; }
+  .gallary .img4 {
+    grid-column: 7/-1;
+    grid-row: 1/span 2; }
+  .gallary .img5 {
+    grid-column: 1/3;
+    grid-row: 3/span 3; }
+  .gallary .img6 {
+    grid-column: 3/span 2;
+    grid-row: 4/ 6; }
+  .gallary .img7 {
+    grid-column: 5/6;
+    grid-row: 4/5; }
+  .gallary .img8 {
+    grid-column: 6/8;
+    grid-row: 3/span 2; }
+  .gallary .img9 {
+    grid-column: 8/9;
+    grid-row: 3/6; }
+  .gallary .img10 {
+    grid-column: 1/2;
+    grid-row: 6/8; }
+  .gallary .img11 {
+    grid-column: 2/4;
+    grid-row: 6/8; }
+  .gallary .img12 {
+    grid-column: 4/5;
+    grid-row: 6/8; }
+  .gallary .img13 {
+    grid-column: 5/8;
+    grid-row: 5/8; }
+  .gallary .img14 {
+    grid-row: 6/8; }
 
 .footer {
   background-color: #101d2c;
