--- a/Nexter/starter/sass/_homes.scss
+++ b/Nexter/starter/sass/_homes.scss
@@ -1,61 +1,65 @@
-.homes{
-    grid-column: center-start/center-end;
-    margin: 15rem 0;
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(25rem,1fr));
-    grid-gap: 6rem;
-    & .home{
-        background-color: $color-grey-light-1;
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        &__img{
-            grid-row: 1/2;
-            grid-column: 1/-1;
-            width: 100%;
-        }
-        &__like{
-            grid-column: 2/3;
-            grid-row: 1/2;
-            justify-self: end;
-            margin: 1rem;
-            fill:$color-primary;
-            width: 3rem;
-            height: 3rem;
-        }
-        &__name{
-            grid-column: 1/-1;
-            width: 80%;
-            justify-self: center;
-            margin-top: -2.5rem;
-            padding: 1.25rem;
-            background-color: $color-secondary;
-            text-align: center;
-            color: #fff;
-            font-family: $font-display;
-            font-size: 1.6rem;
-            font-weight: 400;
-        }
-        &__location,&__rooms{
-            margin-top: 3rem;
-        }
-        &__location,&__rooms,&__area,&__price{
-            font-size: 1.5rem;
-            margin-left: 2rem;
-            align-items: center;
-            gap: 1rem;
-            // justify-content: center;
-            display: flex;
-            svg{
-                fill:$color-primary;
-                width: 3rem;
-                height: 3rem;
-            }
-            p{
+.homes {
+  grid-column: center-start/center-end;
+  margin: 15rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap:6rem;
+  & .home {
+      background-color: $color-grey-light-1;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-row-gap: 3rem;
 
-            }
-        }
-        & .btn{
-            grid-column: 1/-1;
-        }
+    &__img {
+      grid-row: 1/2;
+      grid-column: 1/-1;
+      width: 100%;
     }
+    &__like {
+      grid-column: 2/3;
+      grid-row: 1/2;
+      justify-self: end;
+      margin: 1rem;
+      fill: $color-primary;
+      width: 3rem;
+      height: 3rem;
+    }
+    &__name {
+      grid-column: 1/-1;
+      grid-row: 1/2;
+      align-self: end;
+      width: 80%;
+      justify-self: center;
+      margin-bottom: -2rem;
+      padding: 1.25rem;
+      background-color: $color-secondary;
+      text-align: center;
+      color: #fff;
+      font-family: $font-display;
+      font-size: 1.6rem;
+      font-weight: 400;
+    }
+    &__location,
+    &__rooms {
+      margin-top: 3rem;
+    }
+    &__location,
+    &__rooms,
+    &__area,
+    &__price {
+      font-size: 1.5rem;
+      margin-left: 2rem;
+      align-items: center;
+      display: flex;
+      gap: 1rem;
+      svg {
+        fill: $color-primary;
+        width: 2rem;
+        height: 2rem;
+      }
+    }
+    & .btn {
+      grid-column: 1/-1;
+    }
+  }
 }
