--- a/Nexter/starter/css/style.css
+++ b/Nexter/starter/css/style.css
@@ -197,8 +197,8 @@ body {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(7, 5vw);
-  grid-gap: 2rem;
-  padding: 2rem; }
+  grid-gap: 1.5rem;
+  padding: 1.5rem; }
   .gallary > * {
     width: 100%;
     height: 100%;
@@ -206,28 +206,28 @@ body {
     display: block; }
   .gallary .img1 {
     grid-column: 1/3;
-    grid-row: 1/span 2; }
+    grid-row: 1 / span 2; }
   .gallary .img2 {
-    grid-column: 3/span 3;
-    grid-row: 1/span 3; }
+    grid-column: 3 / span 3;
+    grid-row: 1 / span 3; }
   .gallary .img3 {
     grid-column: 6/7;
     grid-row: 1/3; }
   .gallary .img4 {
     grid-column: 7/-1;
-    grid-row: 1/span 2; }
+    grid-row: 1 / span 2; }
   .gallary .img5 {
     grid-column: 1/3;
-    grid-row: 3/span 3; }
+    grid-row: 3 / span 3; }
   .gallary .img6 {
-    grid-column: 3/span 2;
+    grid-column: 3 / span 2;
     grid-row: 4/ 6; }
   .gallary .img7 {
     grid-column: 5/6;
     grid-row: 4/5; }
   .gallary .img8 {
     grid-column: 6/8;
-    grid-row: 3/span 2; }
+    grid-row: 3 / span 2; }
   .gallary .img9 {
     grid-column: 8/9;
     grid-row: 3/6; }
@@ -244,8 +244,39 @@ body {
     grid-column: 5/8;
     grid-row: 5/8; }
   .gallary .img14 {
-    grid-row: 6/8; }
+    grid-row: 6/8;
+    grid-column: 8/9; }
 
 .footer {
   background-color: #101d2c;
-  grid-column: full-start/full-end; }
+  grid-column: full-start/full-end;
+  padding: 8rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem; }
+  .footer .nav {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-gap: 2rem;
+    align-items: center; }
+    .footer .nav__link {
+      color: white;
+      text-decoration: none;
+      list-style: none;
+      font-family: "Josefin Sans", sans-serif;
+      font-size: 1.4rem;
+      text-transform: uppercase;
+      transition: all 0.2s; }
+    .footer .nav__link:hover, .footer .nav__link:active {
+      background-color: rgba(255, 255, 255, 0.1);
+      transform: translateY(-3px); }
+    .footer .nav > * {
+      padding: 1.5rem;
+      text-align: center; }
+  .footer > div:hover {
+    background-color: #101d2c; }
+  .footer .rights {
+    text-align: center;
+    color: #aaa;
+    font-size: 1.4rem;
+    padding: 0 13rem; }
