--- a/Nexter/starter/sass/_footer.scss
+++ b/Nexter/starter/sass/_footer.scss
@@ -1,4 +1,43 @@
-.footer{
+.footer {
+  background-color: $color-secondary;
+  grid-column: full-start/full-end;
+  padding: 8rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  .nav {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-gap: 2rem;
+    align-items: center;
+    &__link {
+      color: white;
+      text-decoration: none;
+      list-style: none;
+      font-family: $font-display;
+      font-size: 1.4rem;
+      text-transform: uppercase;
+      transition: all 0.2s;
+    }
+    &__link:hover,&__link:active {
+      background-color: rgba(#fff, $alpha: 0.1);
+      transform: translateY(-3px);
+    }
+
+    & > * {
+      padding: 1.5rem;
+      text-align: center;
+    }
+  }
+
+  & > div:hover {
     background-color: $color-secondary;
-    grid-column: full-start/full-end;
+  }
+
+  .rights {
+    text-align: center;
+    color: $color-grey-light-2;
+    font-size: 1.4rem;
+    padding: 0 13rem;
+  }
 }
