--- a/Nexter/starter/css/style.css
+++ b/Nexter/starter/css/style.css
@@ -24,6 +24,11 @@ body {
   font-family: "Josefin Sans", sans-serif;
   font-weight: 400; }
 
+.heading--1 {
+  font-size: 4.5rem;
+  color: #f9f7f6;
+  line-height: 1; }
+
 .heading--2 {
   font-family: "Josefin Sans", sans-serif;
   font-size: 4rem;
@@ -85,12 +90,64 @@ body {
     transform: translateY(1.3rem); }
 
 .header {
-  background-color: #101d2c;
-  grid-column: sidebar-end/col-end 6; }
+  background-image: linear-gradient(rgba(16, 29, 44, 0.9), rgba(16, 29, 44, 0.9)), url(../img/hero.jpeg);
+  background-size: cover;
+  background-position: center;
+  grid-column: sidebar-end/col-end 6;
+  padding: 4rem 6rem;
+  display: grid;
+  grid-template-rows: 1fr min-content 6rem 1fr 1fr;
+  align-items: start;
+  justify-items: start;
+  justify-content: center;
+  align-content: center;
+  grid-gap: 1.5rem; }
+  .header__logo {
+    justify-self: center;
+    height: 3rem; }
+  .header__seenon-text {
+    display: grid;
+    font-size: 1.6rem;
+    color: #aaa;
+    grid-template-columns: 1fr max-content 1fr;
+    align-items: center; }
+    .header__seenon-text::after, .header__seenon-text::before {
+      content: "";
+      display: block;
+      height: 1px;
+      width: 20rem;
+      background-color: currentColor; }
+  .header__seenon-logos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    filter: brightness(70%); }
+    .header__seenon-logos img {
+      height: 2.5rem; }
 
 .realtors {
-  background-color: #b28451;
-  grid-column: col-end 6/-1; }
+  background-color: #101d2c;
+  grid-column: col-end 6/-1;
+  padding: 3rem;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  gap: 2rem; }
+  .realtors__list {
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+    gap: 2rem;
+    margin-bottom: 5vh; }
+  .realtors__img {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%; }
+  .realtors__sold {
+    text-transform: uppercase;
+    color: #f9f7f6;
+    filter: brightness(70%);
+    margin-top: -3px; }
 
 .features {
   grid-column: center-start/center-end;
