--- a/Nexter/starter/sass/_header.scss
+++ b/Nexter/starter/sass/_header.scss
@@ -1,4 +1,51 @@
 .header{
-    background-color: $color-secondary;
+    background-image:linear-gradient(rgba($color-secondary,.9),rgba($color-secondary,.9)), url(../img/hero.jpeg);
+    background-size:cover;
+    background-position: center;
     grid-column: sidebar-end/col-end 6;
+    padding: 4rem 6rem;
+    display: grid;
+    grid-template-rows: 1fr min-content 6rem 1fr 1fr;
+    align-items: start;
+    justify-items: start;
+    justify-content: center;
+    align-content: center;
+    grid-gap:1.5rem;
+    // grid-gap:1rem
+    // display: flex;
+    // flex-direction: column;
+    // align-items: start;
+    // justify-content: center;
+    // gap: 1rem;
+    &__logo{
+        justify-self: center;
+        // align-self: center;
+        height: 3rem;
+    }
+    &__seenon{
+        &-text{
+            display: grid;
+            font-size: 1.6rem;
+            color:$color-grey-light-2;
+            grid-template-columns:  1fr max-content 1fr;
+            align-items: center;
+            &::after,
+            &::before{
+                content: "";
+                display: block;
+                height: 1px;
+                width: 20rem;
+                background-color: currentColor;
+            }
+        }
+        &-logos{
+            display: grid;
+            grid-template-columns: repeat(4,1fr);
+            justify-items: center;
+            filter: brightness(70%);
+            img{
+                height: 2.5rem;
+            }
+        }
+    }
 }
