--- a/Nexter/starter/sass/_typography.scss
+++ b/Nexter/starter/sass/_typography.scss
@@ -6,6 +6,11 @@
 .heading--4,.heading--3,.heading--2,.heading--1{
     @extend %heading;
 }
+.heading--1{
+    font-size: 4.5rem;
+    color: $color-grey-light-1;
+    line-height: 1;
+}
 .heading--2{
     font-family: $font-display;
     font-size: 4rem;
