--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -373,19 +373,17 @@ body {
       .row [class^="col-"] {
         width: 100% !important; } }
   .row .col-1-of-2 {
-    width: calc((100%-6rem) / 2.4); }
+    width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
-    width: calc((100%-2 *6rem) / 3.5); }
-  .row .col-1-of-4 {
-    width: calc((100%-3 *6rem) / 4.8); }
+    width: calc((100% - 2 * 6rem) / 3); }
   .row .col-2-of-3 {
-    width: calc( (((100%-2 *6rem) / 3) * 2) + 6rem);
-    background-color: #f99292; }
+    width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 6rem) / 4); }
   .row .col-2-of-4 {
-    width: calc( 2 * ((100%-3 *6rem) / 4) + 6rem);
-    background-color: bisque; }
+    width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem); }
   .row .col-3-of-4 {
-    width: calc( 3 * ((100%-3 *6rem) / 4) + (2 *6rem)); }
+    width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
 
 .footer {
   background-color: #333;
