--- a/Natours/starter/sass/layouts/_grid.scss
+++ b/Natours/starter/sass/layouts/_grid.scss
@@ -12,45 +12,46 @@
     }
   }
   @include clearfix;
-  [class^="col-"] {
-    // background-color: rgba(125, 201, 201, 0.55);
-    float: left;
-    &:not(:last-child) {
-      margin-right: $gutter-horizontal;
-      @include respond(tab-port) {
-        margin-right: 0;
-        margin-bottom: $gutter-vertical-small;
-      }
+ [class^="col-"] {
+        float: left;
+
+        &:not(:last-child) {
+            margin-right: $gutter-horizontal;
+
+            @include respond(tab-port) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
+        }
+
+        @include respond(tab-port) {
+            width: 100% !important;
+        }
     }
-    @include respond(tab-port) {
-      width: 100% !important;
+
+    .col-1-of-2 {
+        width: calc((100% - #{$gutter-horizontal}) / 2);
+        
     }
-  }
-  .col-1-of-2 {
-    width: calc((100%-#{$gutter-horizontal}) / 2.4);
-  }
-  .col-1-of-3 {
-    width: calc((100%-2 *#{$gutter-horizontal}) / 3.5);
-  }
-  .col-1-of-4 {
-    // background-color: aquamarine;
-    width: calc((100%-3 *#{$gutter-horizontal}) / 4.8);
-  }
-  .col-2-of-3 {
-    width: calc(
-      (((100%-2 *#{$gutter-horizontal}) / 3) * 2) + #{$gutter-horizontal}
-    );
-    background-color: rgb(249, 146, 146);
-  }
-  .col-2-of-4 {
-    width: calc(
-      2 * ((100%-3 *#{$gutter-horizontal}) / 4) + #{$gutter-horizontal}
-    );
-    background-color: bisque;
-  }
-  .col-3-of-4 {
-    width: calc(
-      3 * ((100%-3 *#{$gutter-horizontal}) / 4) + (2 *#{$gutter-horizontal})
-    );
-  }
+
+    .col-1-of-3 {
+        width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+    }
+
+    .col-2-of-3 {
+        width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
+    }
+
+    .col-1-of-4 {
+        width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+    }
+
+    .col-2-of-4 {
+        width: calc(2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal});
+    }
+
+    .col-3-of-4 {
+        width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
+    }
+
 }
